# MOBIUS

./: ### Guarded dhash Rollout — Operato.txt  .babelrc  .coafile  .coverage  .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.json  .flake8  .gitattributes  .gitignore  .pr-body-blockers.md  .pr-body-caption.md  .pr-body-infra.md  .pr-body.md  .pre-commit-config.yaml  .prettierrc  .replit  .vibe_action_log.jsonl  0001-harden-preview-worker-manifests.patch  0002-add-rbac-configuration.patch  0003-add-smoke-test-script.patch  404.html  A2Z_PIPELINE_READY.md  ABYSS_FIX_DOCUMENTATION.md  ABYSS_FIX_FINAL_SUMMARY.md  ABYSS_FIX_SUMMARY.md  API_CORRUPTION_REPAIR_SUMMARY.md  ARTIFACTS_SUMMARY.md  AXIOS_MIGRATION_SUMMARY.md  Apply-PreviewWorkerPatch.ps1  BACK_COMPAT_ALIASES.md  BATCH1_COMPLETE.md  BRANCH_PROTECTION_CURL_COMMAND.md  BRANCH_PROTECTION_SETUP.md  BRANCH_PROTECTION_TOKEN_GUIDE.md  CANONICAL_PROJECT.md  CDN_RUNBOOK.md  CHANGED_FILES.md  CHANGED_FILES_SUMMARY.md  (+771 more)
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-commit.ps1
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection-setup.md  bundle-creation.md  ci-pr-comment.md  deploy-cheatsheet.md  notification-script-examples.md  pull_request_template.md  slack-notifications.md  teams-notifications.md
.parcel-cache/: 165288cdeeccf2e2-AssetGraph  f1b7ac07906769a3-RequestGraph  lock.mdb  snapshot-f1b7ac07906769a3.txt
__tests__/: coala-config.test.js
alerts/: rendering.rules.yml
api/: health.py
backend/: .flake8  (+12 more)
hephaestus/: __main__.py  cli.py  config.py  extract_api.py  logging.py  pyproject.toml
hephaestus/analytics/: __init__.py  corpus.py  qa_scorecards.py  reports.py  schema.py
hephaestus/classifier/: __init__.py  heuristics.py  model.py  vision.py
hephaestus/dedup/: __init__.py  cluster.py  distance.py  hash.py  model.py
hephaestus/metadata/: __init__.py  annotator.py  labels.py  model.py  quantity.py
hephaestus/output/: manifest.py
hephaestus/pdf/: __init__.py  colorspace.py  images.py  ingestion.py
hephaestus/text/: __init__.py  index.py  page_text.py  spatial.py
(+2160 files in other folders)
