[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude common build/dist directories
  build/
  | dist/
  | \.eggs/
  | \.egg-info/
  | \.venv/
  | venv/
  | \.git/
  | node_modules/
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"